# hf_example_repo

./: .gitignore  README.md  agrabber.py  main.py  pyproject.toml  requirements.txt  ruff.toml  subject.py
src/: activation_grabber_example.py  debug_gpt2_config.py  examples.py  gpt2_example.py  main.py  minimal_gpt2_example.py  working_gpt2_example.py
src/hf_example_repo/: __init__.py  activiation_grabber.py  subject.py
src/util/: activations.py  chat_input.py  dataset.py  types.py
tests/: conftest.py  test_activation_grabber.py  test_subject_generation.py
