[project]
name = "hf_example_repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moritz Schlichting", email = "motechnix@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "transformers==4.56.2",
    "torch==2.8.0",
    "nnsight~=0.3.3",
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
hf_example_repo = "main:main"
hf_examples = "examples:main"
hf_gpt2_example = "gpt2_example:main"
hf_working_gpt2_example = "working_gpt2_example:main"
hf_minimal_gpt2_example = "minimal_gpt2_example:main"
hf_debug_gpt2_config = "debug_gpt2_config:main"
hf_activation_grabber_example = "activation_grabber_example:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
